# TurnTrout.com

./: .cursorrules  .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .markdownlintignore  .npmrc  .pa11yci  .pnpmrc  .pre-commit-config.yaml  .pylintrc  .socket.yml  .stylelintignore  .template-sync-conflicts  .template-version  .wordlist.txt  CLAUDE.md  NEXT-STEPS.md  README.md  SUBFONT_PERFORMANCE_INVESTIGATION.md  backstop.cjs  bigrams.json  cline.config.js  eslint.config.js  gallery.html  gen_gallery.py  gen_harness.py  globals.d.ts  index.d.ts  jest.config.js  local-analysis-patches.diff  lostpixel.config.ts  measure.mjs  mine_bigrams.py  missing.txt  mypy.ini  newsletter-draft-2026-03-28.md  package-lock.json  package.json  plan.md  (+11 more)
.claude/: README.md  dev-notes.md  settings.json
.claude/agents/: code-reviewer.md
.claude/hooks/: check-narrative-comments.sh  drop-superseded-ci-events.mjs  (+10 more)
.github/: dependabot.yml  favicon_fetch_urls.txt  lighthouse-a11y-config.json  lighthouse-cls-only-config-mobile.json  lighthouse-cls-only-config.json  lighthouse-config.json  lighthouse-full-config.json  subfont-bisect-ref.txt
.hooks/: commit-msg  format-docstrings.sh  lint-skills.sh  post-commit  pre-commit  pre-push  prepare-commit-msg  timestamp-worker.sh
config/: cline.config.js  constants.json  font_stats.md  heading_case.json  link_annotations.json  link_archive_denylist.json  vnu_allowlist.json
config/python/: .pylintrc  mypy.ini  pyproject.toml
content/: 2019-review-rewrite-seeking-power-is-often-robustly.md  About me.md  Mistakes.md  Mode collapse in RL may be fueled by the update equation.md  My research.md  Posts.md  Stress-test of site features.md  Test page.md  a-certain-formalization-of-corrigibility-is-vnm-incoherent.md  a-kernel-of-truth-insights-from-a-friendly-approach-to.md  a-shot-at-the-diamond-alignment-problem.md  a-world-in-which-the-alignment-problem-seems-lower-stakes.md  actadd-steering-language-models-without-optimization.md  ai-presidents-discuss-ai-alignment-agendas.md  april-fools-definitive-confirmation-of-shard-theory.md  attainable-utility-landscape-how-the-world-is-changed.md  attainable-utility-preservation-concepts.md  attainable-utility-preservation-empirical-results.md  attainable-utility-preservation-scaling-to-superhuman.md  attainable-utility-theory-why-things-matter.md  avoiding-side-effects-in-complex-environments.md  ban-development-of-unpredictable-powerful-models.md  behavioural-statistics-for-a-maze-solving-agent.md  best-reasons-for-pessimism-about-impact-of-impact-measures.md  bruce-wayne-and-the-cost-of-inaction.md  can-fear-of-the-dark-bias-us-more-generally.md  collider-bias-as-a-cognitive-blindspot.md  conclusion-to-reframing-impact.md  confounded-no-longer-insights-from-all-of-statistics.md  conservative-agency-with-multiple-stakeholders.md  continuous-improvement-insights-from-topology.md  corrigibility-as-outside-view.md  date-me.md  deducing-impact.md  design.md  do-a-cost-benefit-analysis-of-your-technology-usage.md  don-t-align-agents-to-evaluations-of-plans.md  don-t-design-agents-which-exploit-adversarial-inputs.md  dreams-of-ai-alignment-the-danger-of-suggestive-names.md  elk-proposal-thinking-via-a-human-imitator.md  (+81 more)
docs/: configuration.md
patches/: 0001-feat-add-commit-flag-to-issues-list-command.patch  katex+0.16.21.patch  katex+0.16.40.patch  katex-scrollable-region-focusable.patch  pa11y@9.0.1.patch  pa11y@9.1.1.patch  subfont+7.2.1.patch
punctilio-package/: README.md  jest.config.js  package.json  pnpm-lock.yaml
quartz/: bootstrap-cli.ts  build.ts  cfg.ts  depgraph.test.ts  depgraph.ts  worker.ts
scripts/: alt_text_main.py  alt_text_utils.py  approve_baselines_from_artifacts.py  archive_links.py  augment_spellcheck_wordlist.sh  blob_report.py  block_katex_font_display.sh  build_fonts.py  built_site_checks.py  chart_extract.py  chart_spec_validator.ts  check_css_vars.fish  check_deepsource_pr.sh  check_link_archive_integrity.py  classify_visual_failures.py  compress.py  compute_favicon_lists.ts  configure_timestamps_remote.sh  convert_assets.py  convert_markdown_yaml.py  convert_tengwar_encoding.cjs  download_external_media.py  dummy_commit_pair.sh  fast_pre_push.sh  fetch_link_annotations.ts  gen_font_stats.test.ts  gen_font_stats.ts  generate_alt_text.py  generate_inverted_variants.py  generate_related_posts.py  generate_visual_gallery.py  handle_assets.sh  handle_local_assets.sh  integrate_new_favicons.py  invert_constants.py  label_alt_text.fish  label_alt_text.py  label_invert.py  linkchecker.fish  make_favicon_transparent.fish  (+40 more)
tag-suggestions/: REPORT.md
website_content/: 2019-review-rewrite-seeking-power-is-often-robustly.md  About me.md  Against shorthand.md  Against-shoggoth.md  BiDPO postmortem.md  BiDPO-postmortem.md  Breaking Free with Doctor Stone.md  Breaking-Free-with-Doctor-Stone.md  Deep causal transcoding.md  Deep-causal-transcoding.md  Emoji-fixture.md  Filter misalignment data to avoid self-fulfilling misalignment.md  Filter-misalignment-data-to-avoid-self-fulfilling-misalignment.md  Gradient routing demo.md  Gradient routing.md  Gradient-routing-demo.md  Gradient-routing.md  Mistakes.md  My research.md  My-research.md  Posts.md  Test page.md  Test-page.md  a-certain-formalization-of-corrigibility-is-vnm-incoherent.md  a-kernel-of-truth-insights-from-a-friendly-approach-to.md  a-shot-at-the-diamond-alignment-problem.md  a-world-in-which-the-alignment-problem-seems-lower-stakes.md  about-me.md  actadd-steering-language-models-without-optimization.md  advanced-privacy.md  against-shoggoth.md  ai-presidents-discuss-ai-alignment-agendas.md  alignment-allows-nonrobust-decision-influences-and-doesn-t.md  and-my-axiom-insights-from-computability-and-logic.md  april-fools-definitive-confirmation-of-shard-theory.md  attainable-utility-landscape-how-the-world-is-changed.md  attainable-utility-preservation-concepts.md  attainable-utility-preservation-empirical-results.md  attainable-utility-preservation-scaling-to-superhuman.md  attainable-utility-theory-why-things-matter.md  (+144 more)
(+894 files in other folders)
